@@ -120,7 +120,6 @@
   <block id="06ad314b340900d226b1196e1fe289e9" category="sidebar">Démarrage rapide</block>
   <block id="9a11eb5da5d06e3593dc6b41553d97e5" category="sidebar">Configurez les autorisations</block>
   <block id="4654b99a0535f374a8ff766873df50a6" category="sidebar">Créer ou découvrir un environnement de travail</block>
-  <block id="74e5a199ea27b8b415c0c77d75229e79" category="sidebar">Configuration hôte NVMe et iSCSI</block>
   <block id="0adc03eac86772ad2c75c8f140be417e" category="sidebar">Connaissances et support</block>
   <block id="813011e2103649bb71f124adedcc10ea" category="sidebar">Communauté sur les blogs</block>
   <block id="dd490b81914dd945601e442a41cb4222" category="sidebar">Communauté NetApp</block>
@@ -348,8 +347,6 @@
   <block id="c8df78ded4cea0598f7679f11a3c3246" category="list-text">Sélectionnez *Ajouter manuellement*, puis suivez les étapes ci-dessous pour remplir les trois sections sous _Configuration des autorisations_.</block>
   <block id="ef7fe40c036b5b08d74837dcb702dc33" category="inline-image-macro">Capture d'écran montrant les éléments que vous devez définir manuellement pour chaque ensemble d'informations d'identification.</block>
   <block id="083fb8583b0a2366ef9a94388dd9640f" category="paragraph"><block ref="083fb8583b0a2366ef9a94388dd9640f" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="d11861b4e2dfc9ac3d86245926aa2785" category="section-title">Étape 1 : sélectionnez les fonctionnalités du workload et créez les règles IAM</block>
-  <block id="530d81548274a062436af51b8c3e829f" category="paragraph">Dans cette section, vous allez choisir les types de capacités de charge de travail qui seront gérables dans le cadre de ces informations d'identification, et les autorisations activées pour chaque charge de travail. Vous devrez copier les autorisations de règles pour chaque workload sélectionné dans la Codebox et les ajouter à la console de gestion AWS de votre compte AWS pour créer les stratégies.</block>
   <block id="445f4ba50fbc8e7b285aedb4396412bb" category="inline-image-macro">Une capture d'écran montrant quels types de capacités de charge de travail seront gérables dans le cadre des stratégies contenues dans ces informations d'identification.</block>
   <block id="0edc9a25423073fcc768405f6aeda88b" category="paragraph"><block ref="0edc9a25423073fcc768405f6aeda88b" category="inline-image-macro-rx" type="image"></block></block>
   <block id="eb73cd2a4bbc3dbb4bbab5f5a9b6fb8d" category="list-text">Dans la section *Créer des stratégies*, activez chacune des capacités de charge de travail que vous souhaitez inclure dans ces informations d'identification. Activez *Storage* pour créer et gérer des systèmes de fichiers.</block>
@@ -535,7 +532,6 @@
   <block id="cf9ae4b94802ab988b8884ed9bf12509" category="sidebar">Amazon FSX pour la gestion NetApp ONTAP à l'aide de BlueXP </block>
   <block id="622ad6297367666ca450d994236cbc2d" category="paragraph">Si vous recherchez l'option _Advanced View_, qui vous permet de gérer un système de fichiers FSX for ONTAP à l'aide du Gestionnaire système ONTAP, vous pouvez désormais trouver cette option dans le canevas BlueXP  après avoir sélectionné l'environnement de travail.</block>
   <block id="66cff4f3970f46872862ee60b7f0a832" category="paragraph"><block ref="66cff4f3970f46872862ee60b7f0a832" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="1de58d4f64d081fb97f1d591f6b96a7c" category="paragraph">Lorsque vous ajoutez de nouveaux identifiants pour FSX pour ONTAP à partir du stockage en usine de workloads BlueXP , vous devez décider quel niveau d'autorisations, ou _mode opérationnel_, vous souhaitez utiliser. Pour découvrir et déployer des ressources AWS comme FSX pour les systèmes de fichiers ONTAP, vous avez besoin d'autorisations _read_ ou _automatisera_. BlueXP  FSX pour ONTAP fonctionnera en _Basic_ mode, à moins que vous ne sélectionniez _read_ mode ou _automate_ mode. <block ref="d6d34839020cc53cd6cb3ac295769611" category="inline-link-macro-rx"></block>.</block>
   <block id="d8030aec0b616170c1d448f645629048" category="paragraph">À partir du canevas BlueXP , vous pouvez créer et découvrir des environnements de travail FSX pour ONTAP et utiliser System Manager et d'autres services BlueXP . Si vous souhaitez gérer les environnements de travail FSX pour ONTAP et les workloads qui s'exécutent sur Amazon FSX pour NetApp ONTAP, utilisez<block ref="809afc2f4cb79e608d46f9e3b3ede420" category="inline-link-rx"></block>.</block>
   <block id="080bf239eab90228128570c1dcff727d" category="inline-link-macro">Découvrez comment créer et découvrir des environnements de travail FSX pour ONTAP dans BlueXP </block>
   <block id="cb955ea4bb940d72f2e54584baf5cad0" category="paragraph"><block ref="245fb4ba49d4510f0ab7c36a85ac006b" category="inline-link-macro-rx"></block>.</block>
@@ -568,4 +564,18 @@
   <block id="fa7394842a17e21de2bb5eb52a3d97eb" category="paragraph">Vous pouvez choisir des unités de volume (Gio ou Tio) lors de la création de volumes dans FSX pour ONTAP.</block>
   <block id="25c675873bda3d8b54aac90e0f94b61a" category="paragraph">Vous pouvez désormais créer des volumes CIFS dans FSX pour ONTAP à l'aide de Cloud Manager.</block>
   <block id="d3700b7f8295ad136939c888e0efdcee" category="paragraph">Désormais, vous pouvez modifier les volumes FSX pour ONTAP à l'aide de Cloud Manager.</block>
+  <block id="16e305f77c7a0272aceac8c95312d98a" category="doc">NetApp publie d'autres ressources CloudFormation</block>
+  <block id="c043b3439543ebfc027a3c1fcb5613a5" category="paragraph">NetApp fournit désormais des ressources CloudFormation qui permettent aux clients d'utiliser des composants ONTAP avancés qui ne sont pas exposés dans la console AWS. CloudFormation est le mécanisme d'infrastructure-as-code d'AWS. Vous pourrez créer des relations de réplication, des partages CIFS, des règles d'exportation NFS, des snapshots, etc.</block>
+  <block id="01d4e72c68c36e8905e55eeb7f8aff0c" category="inline-link-macro">Gérez les systèmes de fichiers Amazon FSX pour NetApp ONTAP à l'aide de CloudFormation</block>
+  <block id="f883109f2802c104ac9ae2e21a56b762" category="paragraph"><block ref="f883109f2802c104ac9ae2e21a56b762" category="inline-link-macro-rx"></block></block>
+  <block id="c92644a757476bbef61fa3b782e32d95" category="paragraph">Lorsque vous ajoutez de nouveaux identifiants pour FSX pour ONTAP à partir du stockage en usine de workloads BlueXP , vous devez décider quel niveau d'autorisations, ou _mode opérationnel_, vous souhaitez utiliser. Pour découvrir et déployer des ressources AWS comme FSX pour les systèmes de fichiers ONTAP, vous avez besoin d'autorisations _read_ ou _automatisera_. BlueXP  FSX pour ONTAP fonctionnera en _Basic_ mode, à moins que vous ne sélectionniez _read_ mode ou _automate_ mode. _Read_ sont les mêmes que les autorisations de vue. _Automate_ sont les mêmes que les autorisations d'opération. <block ref="d6d34839020cc53cd6cb3ac295769611" category="inline-link-macro-rx"></block>.</block>
+  <block id="facff49e2bd72676ffc323376c6f7c86" category="section-title">Étape 1 : sélectionner la fonctionnalité de stockage et créer la règle IAM</block>
+  <block id="643bb3986a2755c5582d9f82862ff934" category="paragraph">Dans cette section, vous allez choisir la capacité de stockage à gérer dans le cadre de ces informations d'identification, ainsi que les autorisations activées pour le stockage. Vous avez également la possibilité de sélectionner d'autres charges de travail comme les bases de données, GenAI ou VMware. Une fois que vous avez effectué vos sélections, vous devez copier les autorisations de règle pour chaque workload sélectionné dans la zone de code et les ajouter à la console de gestion AWS de votre compte AWS pour créer les stratégies.</block>
+  <block id="45f2112a5aef07c91c1003cce4dc5410" category="paragraph">Les autorisations de stockage peuvent également être copiées à partir des onglets suivants.</block>
+  <block id="7a38975bfee632036d1205b2951258b2" category="open-title">Autorisations de lecture</block>
+  <block id="79eecef4aff74983cfd4aed5da7f2f30" category="open-title">Automatisez les autorisations</block>
+  <block id="be0bf2e3af6b03378bb493466f3c335f" category="section-title">Gérez un système de fichiers à l'aide d'Amazon CloudFormation</block>
+  <block id="c2f7d57c8ea888af74a7d46699221837" category="paragraph">Vous pouvez provisionner et gérer des ressources du système de fichiers FSX pour ONTAP (volumes, partages CIFS, règles d'exportation, etc.) à l'aide d'Amazon CloudFormation.</block>
+  <block id="2c263d7a0f58593b73a60f40d9f5805e" category="paragraph"><block ref="2c263d7a0f58593b73a60f40d9f5805e" category="inline-link-macro-rx"></block></block>
+  <block id="13ac5039f81a1aa4ae7419bf17b5b6a0" category="section-title">06 janvier 2025</block>
 </blocks>
